--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
